# turonet-rs

./: Cargo.toml  LICENSE  README.md  openocd.cfg
.github/workflows/: rust.yml
src/: main.rs
